# cart_pole

./: .gitignore  README.md  TODO.md  documentaion.md
cart_pole_description/: CMakeLists.txt  package.xml
cart_pole_description/cart_pole/: cart_move.part  cart_move.stl  cart_pole_line.part  cart_pole_line.stl  cart_swinger.part  cart_swinger.stl  robot.urdf  robot.urdf.xacro  robot.urdf.xacro.22  ros2_control.urdf.xacro  simple_physics_engine.py  support_plaform_1.part  support_plaform_1.stl
cart_pole_description/config/: effort_control.yaml
cart_pole_description/launch/: all.launch.py  cart_pole.launch.py  cart_pole_gz_sim.launch.py  controllers.launch.py  description.launch.py  gazebo.launch.xml  gazebo_complete.launch.xml
cart_pole_description/rviz/: cart_pole.rviz
cart_pole_description/worlds/: empty_with_plugins.sdf
cart_pole_lypunov_lqr/: CMakeLists.txt  package.xml
cart_pole_lypunov_lqr/config/: controller.yaml
cart_pole_lypunov_lqr/launch/: lqr_swinger.launch.py  rviz_test_launch.py
cart_pole_lypunov_lqr/src/: effort_to_determine_direction.cpp  gazebo_feedback_and_controller.cpp  rviz_position_check.cpp
cat_pole_de/: CMakeLists.txt  package.xml
cat_pole_de/config/: de_simulation.yaml
cat_pole_de/include/cat_pole_de/: de_simulation_node.hpp
cat_pole_de/launch/: de_simulation.launch.py
cat_pole_de/src/: de_simulation_node.cpp
extra_resource/matlab/: LQR_design.m
